@@ -1,5 +1,8 @@
 Changes with Apache 1.3b8
 
+  *) [SECURITY] A possible buffer overflow in the ftp proxy was fixed.
+     [Martin Kraemer]
+
   *) Transform the configure message "You need root priviledges for suEXEC"
      from a fatal error into a (more friendly) warning because the building
      ("make") of Apache we can allow, of course. Root priviledges are needed
